--- a/newsprojct/newsapp/templates/edit_news.html
+++ b/newsprojct/newsapp/templates/edit_news.html
@@ -26,11 +26,15 @@
 
   <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
+    
+  <a href="{% url 'admin_dashboard' %}" class="btn btn-secondary btn-sm mb-3">
+    <i class="fas fa-arrow-left"></i> Back to Dashboard
+  </a>
     <div class="mb-3">
       <label class="form-label">Title</label>
       <input type="text" name="title" class="form-control" value="{{ news.title }}" required>
     </div>
-
+    
     <div class="mb-3">
       <label class="form-label">Content</label>
       <textarea name="content" class="form-control" rows="5" required>{{ news.content }}</textarea>
