admin_dashboard.html

--- a/newsprojct/newsapp/templates/admin_dashboard.html
+++ b/newsprojct/newsapp/templates/admin_dashboard.html
@@ -74,7 +74,7 @@
         <a href="{% url 'add_headline_news' %}" class="nav-link text-white">Add Headline News</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link text-white">Manage Ads</a>
+        <a href="{% url 'manage_ads' %}" class="nav-link text-white">Manage Ads</a>
       </li>
       
       <li class="nav-item">
