--- a/newsprojct/newsapp/templates/index.html
+++ b/newsprojct/newsapp/templates/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Malayalam News</title>
+        <title>K24 Online News</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <link href="{% static 'img/favicon.ico' %}" rel="icon">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -126,7 +126,7 @@
                 <a href="{% url 'news_detail' news.id %}" class="text-primary">Read more</a>
             </p>
             <p class="mb-0 text-secondary small">
-                <strong>Malayalam News Webdesk</strong> • {{ news.created_at|date:"F d, Y" }}
+                <strong>K24 OnlineNews Webdesk</strong> • {{ news.created_at|date:"F d, Y" }}
             </p>
         </div>
     </div>
