--- a/newsprojct/newsapp/templates/index.html
+++ b/newsprojct/newsapp/templates/index.html
@@ -33,7 +33,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom shadow-sm">
         <div class="container">
             <a class="navbar-brand fw-bold text-uppercase" href="/" style="letter-spacing: 1px; font-family: 'Roboto', sans-serif;">
-                MALAYALAM<span style="color: #ffc107;">NEWS</span>
+                K24 Online<span style="color: #ffc107;">NEWS</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
